5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1662_1394.log
== TEST (2019-04-15 14:19:39) 
-- CODE:
q = int(input("quantidade de horas")

if: (q => 20)
	x = (50 * q)
	print(x)
-- ERROR:
File "XXXX", line 3
    if: (q => 20)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:28) 
-- CODE:
q = int(input("quantidade de horas")

if: (q => 20)
	x = (50 * q)
	print(round(x,2)
else:
	(q > 20)
	l = 50 * q + 70)
	print(round(l,2)
-- ERROR:
File "XXXX", line 3
    if: (q => 20)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:56) 
-- CODE:
q = int(input("quantidade de horas")

if: (q => 20)
	x = (50 * q)
	print(round(x,2)
else:
	(q > 20)
	h = q - 20
	l = (50 * q) + (h * 70)
	print(round(l,2)

-- ERROR:
File "XXXX", line 3
    if: (q => 20)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:13) 
-- CODE:
q = int(input("quantidade de horas")

if (q => 20):
	x = (50 * q)
	print(round(x,2)
else:
	(q > 20)
	h = q - 20
	l = (50 * q) + (h * 70)
	print(round(l,2)

-- ERROR:
File "XXXX", line 3
    if (q => 20):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:21) 
-- CODE:
q = int(input("quantidade de horas: ")

if (q => 20):
	x = (50 * q)
	print(round(x,2)
else:
	(q > 20)
	h = q - 20
	l = (50 * q) + (h * 70)
	print(round(l,2)

-- ERROR:
File "XXXX", line 3
    if (q => 20):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:38) 
-- CODE:
q = int(input("quantidade de horas: ")

 (q => 20):
	x = (q * 50)
	print(round(x,2)


-- ERROR:
File "XXXX", line 3
    (q => 20):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:43) 
-- CODE:
q = int(input("quantidade de horas: ")
x= (q * 50)

if (q <= 20):
	print(round(x,2))
else:
	(q >= 20)
	print("nao")

-- ERROR:
File "XXXX", line 2
    x= (q * 50)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:31:07) 
-- CODE:
q = int(input("quantidade de horas: ")
x= (q * 50)
print (x)

-- ERROR:
File "XXXX", line 2
    x= (q * 50)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:31:32) 
-- CODE:
q = int(input("quantidade de horas: ")
x = (q * 50)
print(x)


-- ERROR:
File "XXXX", line 2
    x = (q * 50)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:31:49) 
-- CODE:
q = int(input("quantidade de horas: ")



-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:32:02) 
-- CODE:
q = int(input("quantidade de horas: ")
print(q)


-- EXECUTION TIME:
0.131693
-- ERROR:
  File "/home/codebench/codes/1662/1394/main.py", line 2
    print(q)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:06) 
-- CODE:
q = int(input("quantidade de horas: ")
print(q)


-- ERROR:
File "XXXX", line 2
    print(q)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:36:58) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)

if (q >= 20):
	print(round(l,2))
else (q < 20):
	h = (q - 20)
	b = (50 * 20)+(h * 70)
	print(round(b,2))


-- ERROR:
File "XXXX", line 6
    else (q < 20):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:37:06) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)

if (q >= 20):
	print(round(l,2))
else (q < 20):
	h = (q - 20)
	b = (50 * 20)+(h * 70)
	print(round(b,2))


-- ERROR:
File "XXXX", line 6
    else (q < 20):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:37:53) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)

if (q =< 20):
	print(round(l,2))
else (q > 20):
	h = (q - 20)
	b = (50 * 20)+(h * 70)
	print(round(b,2))


-- EXECUTION TIME:
0.19992
-- ERROR:
  File "/home/codebench/codes/1662/1394/main.py", line 4
    if (q =< 20):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:38:08) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)

if (q =< 20):
	print(round(l,2))
	
else (q > 20):
	h = (q - 20)
	b = (50 * 20)+(h * 70)
	print(round(b,2))


-- ERROR:
File "XXXX", line 4
    if (q =< 20):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:38:21) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)

if (q =< 20):
	print(round(l,2))
	
else:
	(q > 20)
	h = (q - 20)
	b = (50 * 20)+(h * 70)
	print(round(b,2))


-- ERROR:
File "XXXX", line 4
    if (q =< 20):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:42:37) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)

if (q =< 20):
	print(round(l,2))
	
else:
	(q > 20)
	h = (q - 20)
	b = (50 * 20) + (h * 70)
	print(round(b,2))


-- ERROR:
File "XXXX", line 4
    if (q =< 20):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:31) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)
if (q =< 20):
	print(round(l,2))	
else:
	(q > 20)
	h = (q - 20)
	b = (50 * 20) + (h * 70)
	print(round(b,2))


-- ERROR:
File "XXXX", line 3
    if (q =< 20):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:30) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)
h = (q - 20)
if (q =< 20):
	print(round(l,2))
else :
	(q > 20)
	b = (50 * 20) + (h * 70)
	print(round(b,2))


-- ERROR:
File "XXXX", line 4
    if (q =< 20):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:46:15) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)
h = (q - 20)
if (q =< 20):
	print(round(l,2))
else :
	(q>20)
	b = (50*20)+(h*70)
	print(round(b,2))


-- ERROR:
File "XXXX", line 4
    if (q =< 20):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:47:59) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)
h = (q - 20)
if(q =< 20):
	print(round(l,2))
else(q>20):
	b = (50*20)+(h*70)
	print(round(b,2))


-- ERROR:
File "XXXX", line 4
    if(q =< 20):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:39) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)
h = (q - 20)

if q >= 20:
	print(round(l,2))
else q>20:
	b = (50*20)+(h*70)
	print(round(b,2))


-- ERROR:
File "XXXX", line 7
    else q>20:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:50:19) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)
h = (q - 20)

if q >= 20:
	print(round(l,2))
	
else :
	q>20
	b = (50*20)+(h*70)
	print(round(b,2))


-- OUTPUT:
650
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:51:04) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)
h = (q - 20)

if q >= 20:
	print(round(l,2))
	
else :
	q>20
	b = (50*20) + (h*70)
	print(round(b,2))


-- OUTPUT:
650
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:52:34) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)
h = q - 20

if q >= 20:
	print(round(l,2))
	
else :
	q>20
	b = (50*20) + (h * 70)
	print(round(b,2))


-- OUTPUT:
650
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:52:53) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)
h = q - 20

if q >= 20:
	print(round(l,2))
	
else :
	q>20
	b = (50 * 20) + (h * 70)
	print(round(b,2))


-- OUTPUT:
650
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:49) 
-- CODE:
q = int(input("quantidade de horas: "))
l = (q * 50)
h = q - 20

if q >= 20:
	print(round(l,2))
	
else :
	q>20
	b = (50 * 20) + (h * 70)
	print(round(b,2))


-- OUTPUT:
650
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:28) 
-- CODE:
q = float(input("quantidade de horas: "))
l = (q * 50)
h = 20 - q

if q >= 20:
	print(round(l,2))
	
else :
	q>20
	b = (50 * 20) + (h * 70)
	print(round(b,2))


-- OUTPUT:
1350.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:53) 
-- CODE:
q = float(input("quantidade de horas: "))
l = (q * 50)
h = 20 - q

if q >= 20:
	print(round(l,2))
	
else :
	q>20
	b = (50 * 20) + (70 * h)
	print(round(b,2))


-- OUTPUT:
1350.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
